--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,30 @@ body{
 .bold{
     font-weight: bold;
 }
+
+
+.task-complete{
+    width: 30px;
+}
+
+.delete-btn{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.delete-btn i{
+    font-size: 20px;
+}
+
+.task-item button{
+    border: none;
+    background-color: unset; 
+}
+
+.task-item span{
+    font-weight: bold;
+}
